--- a/templates/moviegridfw.html
+++ b/templates/moviegridfw.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 {% if not seriesall %}
-<div class="hero common-hero" style="background: url('https://wallpaperstock.net/wallpapers/thumbs/54012hd.jpg') no-repeat;
+<div class="hero common-hero" style="background: url('http://territorioinformativo.com/wp-content/uploads/2016/10/Cine-Territorio-Informativo2.gif') no-repeat;
   background-position: center 0px;
                       text-align: center;
                       background-size: cover;
